<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SortListActivity">
    <ScrollView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bubble_sort"
                android:id="@+id/bubbleBtn"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/insertion_sort"
            android:id="@+id/insertionBtn"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/selection_sort"
                android:id="@+id/selectionBtn"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/shell_sort"
                android:id="@+id/shellBtn"/>


        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/comb_sort"
                android:id="@+id/combBtn"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/merge_sort"
                android:id="@+id/mergeBtn"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/heap_sort"
                android:id="@+id/heapBtn"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/quick_sort"
                android:id="@+id/quickBtn"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/counting_sort"
                android:id="@+id/countingBtn"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bucket_sort"
                android:id="@+id/bucketBtn"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/radix_sort"
                android:id="@+id/radixBtn"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/distribution_sort"
                android:id="@+id/distributionBtn"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
